# visualvault

./: .env.example  .gitignore  Dockerfile  Dockerfile.gpu  Makefile  README.md  alembic.ini  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 002_create_assets_table.py  003_add_user_tags.py  20240115_100000_create_users_and_api_keys.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/api/v1/: analysis.py  assets.py  auth.py  health.py  router.py  search.py  tags.py
app/middleware/: __init__.py  logging.py  metrics.py  rate_limit.py
app/ml/: __init__.py  clip_service.py  style_transfer.py  transformer_net.py  yolo_service.py
app/models/: __init__.py  asset.py  base.py  tag.py  user.py
app/schemas/: asset.py  common.py  user.py
app/services/: auth.py  cache.py  storage.py
app/utils/: image.py
app/workers/: __init__.py  celery_app.py
app/workers/tasks/: __init__.py  processing.py
docs/: FUTURE_MODULES.md
docs/assignments/: assignment-01-ml-api-service.md
docs/module-01/: 01-dockerfile.md  02-docker-compose.md  03-fastapi-basics.md  04-pydantic-settings.md  05-project-structure.md  README.md
docs/module-02/: 01-sqlalchemy-async.md  02-sqlalchemy-models.md  03-alembic-migrations.md  04-password-security.md  05-jwt-authentication.md  06-api-keys.md  README.md
docs/module-03/: 01-file-uploads.md  02-file-validation.md  03-storage-service.md  04-asset-model.md  05-image-processing.md  README.md
docs/module-04/: 01-celery-basics.md  02-celery-tasks.md  03-clip-embeddings.md  04-similarity-search.md  05-worker-management.md  README.md
docs/module-05/: 01-rate-limiting.md  02-redis-caching.md  03-request-logging.md  04-metrics-monitoring.md  05-production-readiness.md  README.md
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx  ThemeSwitcher.jsx
frontend/src/contexts/: ThemeContext.jsx
tests/: __init__.py  conftest.py
tests/test_api/: test_auth.py  test_health.py
(+10 files in other folders)
